--- a/src/components/Payment/index.css
+++ b/src/components/Payment/index.css
@@ -53,12 +53,13 @@ p {
 }
 
 .terms p {
-  font-weight: 8px;
+  font-size: 20px;
 }
-/* 
 
-   <div className="payment mt-3">
-        <h5>${price}</h5>
-        {casino && "multiplier " + multi}
-      </div>
-*/
+.chicken {
+  width: 100%;
+  height: 530px;
+  text-align:center;
+  background-image: url(../../assets/chicken2.jpeg);
+  background-repeat:no-repeat;
+}
