--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,9 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
 .App {
-  font-family: sans-serif;
   text-align: center;
 }
 
-.title {
-  text-align: center;
-}
-.header {
-  margin-bottom: 10px;
-}
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-.bravebutton {
-  margin-left: 30px;
-}
-.title {
-  color: #00c2c7;
-}
-.ordersummary {
-  border: 0.5px solid #00c2c7;
-  background-color: #00c2c7;
-  margin: 20px 40px;
-  border-radius: 20px;
-  padding: 20px;
-}
-.ordersummary ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.App-link {
+  color: #61dafb;
 }
 
-.ordersummary li {
-  color: white;
-  text-align: left;
-}
 
-p {
-  background-color: #00c2c7;
-  color: white;
-  padding: 20px;
-  font-size: 30px;
-  margin: 20px 0;
-}
-
-.terms p {
-  font-weight: 8px;
-}
-/* 
-
-   <div className="payment mt-3">
-        <h5>${price}</h5>
-        {casino && "multiplier " + multi}
-      </div>
-*/
